--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -16,7 +16,7 @@
     bottom: 89px;
   }
 }
-.lds-ring div {
+.lds-ring span {
   box-sizing: border-box;
   display: block;
   position: absolute;
@@ -28,13 +28,13 @@
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: $light-cyan transparent transparent transparent;
 }
-.lds-ring div:nth-child(1) {
+.lds-ring span:nth-child(1) {
   animation-delay: -0.45s;
 }
-.lds-ring div:nth-child(2) {
+.lds-ring span:nth-child(2) {
   animation-delay: -0.3s;
 }
-.lds-ring div:nth-child(3) {
+.lds-ring span:nth-child(3) {
   animation-delay: -0.15s;
 }
 @keyframes lds-ring {
